// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the ExpenseListHeader component with the correct value with 1 expense 1`] = `
<div>
  <h3>
    You have 
    1
     
    expense
    , totalling 
    $34.99
  </h3>
</div>
`;

exports[`should render the ExpenseListHeader component with the correct value with multiple expenses 1`] = `
<div>
  <h3>
    You have 
    2
     
    expenses
    , totalling 
    $102.99
  </h3>
</div>
`;
